<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity"
    android:gravity="center"
    android:padding="35dp">

    <TextView
        android:id="@+id/txt_title_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/main_title"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/main_img_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:src="@drawable/puzzle15"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/music_note_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/music_note_icon"
            tools:ignore="ContentDescription" />

        <Switch
            android:id="@+id/music_switch_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/music_txt"
            android:checked="false"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/play_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:backgroundTint="@color/gray"
            android:text="@string/start_game" />

    </LinearLayout>
</LinearLayout>

